[package]
name = "dd_tran_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
baidu_trans = { version = "0.7.5", features = ["aio"] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
