[package]
name = "dd_tran_tool"
version = "0.1.3"
edition = "2021"
authors = ["hlxsmail@gmail.com"]
license = "MIT OR Apache-2.0"
description = "idea 插件开发多语言翻译工具"
readme = "README.md"
homepage = "https://github.com/mdddj/dd_tran_tool_rust"
repository = "https://github.com/mdddj/dd_tran_tool_rust"
keywords = ["idea", "plugin", "tran", "dd_tran_tool"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
baidu_trans = { version = "0.7.5", features = ["aio"] }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4"
